package org.switch2022.project.mapper.REST;

public class InputUsInSprintStatusDTO {

    public String projectCode;
    public String userStoryNumber;
    public int sprintNumber;
    public String userStoryStatus;
}
